--- a/server/Inventura.Infrastructure/Inventura.Infrastructure.csproj
+++ b/server/Inventura.Infrastructure/Inventura.Infrastructure.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="../Inventura.Application"/>
+    <ProjectReference Include="../Inventura.Domain"/>
+  </ItemGroup>
+
 </Project>
