--- a/server/Inventura.Presentation/Inventura.Presentation.csproj
+++ b/server/Inventura.Presentation/Inventura.Presentation.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="../Inventura.Application"/>
+    <ProjectReference Include="../Inventura.Infrastructure"/>
+  </ItemGroup>
+
 </Project>
