setting up program.cs

--- a/server/Inventura.Application/Inventura.Application.csproj
+++ b/server/Inventura.Application/Inventura.Application.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="../Inventura.Domain"/>
+    <ProjectReference Include="../Inventura.Domain/Inventura.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.3" />
   </ItemGroup>
 
 </Project>
