--- a/server/Inventura.Infrastructure/Inventura.Infrastructure.csproj
+++ b/server/Inventura.Infrastructure/Inventura.Infrastructure.csproj
@@ -7,8 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="../Inventura.Application"/>
-    <ProjectReference Include="../Inventura.Domain"/>
+    <ProjectReference Include="../Inventura.Application/Inventura.Application.csproj" />
+    <ProjectReference Include="../Inventura.Domain/Inventura.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="13.1.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="10.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="10.0.3" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.3" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0" />
   </ItemGroup>
 
 </Project>
