--- a/server/Inventura.Presentation/appsettings.Development.json
+++ b/server/Inventura.Presentation/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=;Port=;Database=;Username=;Password=;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
